--- a/2_Loading_Queried_Data_for_Plots.ipynb
+++ b/2_Loading_Queried_Data_for_Plots.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN3s6pxu5gfGSCDjCH7M6ce",
+      "authorship_tag": "ABX9TyOHJ1A6fSjmFohCfLMc13kx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Noelle-Pastor/Top-American-Authors-in-19th---21st-Century-Literary-Anthologies/blob/main/2_Loading_Queried_Data_for_Plots.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Loading data for plots**"
+      ],
+      "metadata": {
+        "id": "77RkS2u7kXqm"
+      }
     },
     {
       "cell_type": "code",
